<resources>
    <string name="app_name">Ikode SC Reader</string>
    <string name="ifsome">\"if something sounds too good to be true, it is most likely is\".</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_verification">Verification</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="prompt_token">Provide token </string>
    <string name="action_login">Sign in to Profile</string>
    <string name="action_verify">Verify Token</string>
    <string name="verification_text"> Is this your passphrase? if YES, please enter your verification code. Otherwise, Click cancel or GO back to the main screen </string>
    <string name="title_activity_about">About this App</string>
    <string name="title_activity_splash">Welcome</string>
    <string name="title_activity_home">Main</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="eulalabel">End User License Agreement</string>
    <string name="copyrightlabel">© Copyright 2016, Ikona AG</string>
    <string name="apachelicensetext">Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at \n\nhttp://www.apache.org/licenses/LICENSE-2.0 \n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="allrights">© Ikona AG All Rights Reserved 2016</string>
    <string name="pleaseread">Please read this End-User License Agreement (\"Agreement\") carefully before downloading or using our IkodeSC Reader® for mobile devices (\"Application\").\n\nBy downloading or using the Application, you are agreeing to be bound by the terms and conditions of this Agreement, our more detailed \"Terms of Use\" agreement and our \"Privacy Policy\", which you find in the individual Terms of Use and Privacy Policy files in this application. If you do not agree to the terms of this Agreement, the Terms of Use and the Privacy Policy, do not download or use the Application.</string>
    <string name="licenseLabel">License</string>
    <string name="licenseText">Ikona AG grants you a revocable, non¬exclusive, non¬transferable, limited license to download, install and use the Application solely for your personal, non¬commercial purposes strictly in accordance with the terms of this Agreement.</string>
    <string name="restrictionLabel">Restrictions</string>
    <string name="restrictionText">You agree not to, and you will not permit others to license, sell, rent, lease, assign, distribute, transmit, host, outsource, disclose or otherwise commercially exploit the Application or make the Application available to any third party.</string>
    <string name="modificationLabel">Modifications to Application</string>
    <string name="modificationText">Ikona AG reserves the right to modify, suspend or discontinue, temporarily or permanently, the Application or any service to which it connects, with or without notice and without liability to you.</string>
    <string name="termLabel">Term and Termination</string>
    <string name="termText">This Agreement shall remain in effect until terminated by you or Ikona AG. Ikona AG may, in its sole discretion, at any time and for any or no reason, suspend or terminate this Agreement with or without prior notice.  This Agreement will terminate immediately, without prior notice from Ikona AG, in the event that you fail to comply with any provision of this Agreement. You may also terminate this Agreement by deleting the Application and all copies thereof from your mobile device.  Upon termination of this Agreement, you shall cease all use of the Application and delete all copies of the Application from your mobile device.</string>
    <string name="severability">Severability</string>
    <string name="severabilityText">If any provision of this Agreement is held to be unenforceable or invalid, such provision will be changed and interpreted to accomplish the objectives of such provision to the greatest extent possible under applicable law and the remaining provisions will continue in full force and effect.</string>
    <string name="ammendmentsLabel">Amendments to this Agreement</string>
    <string name="ammendmentText">Ikona AG reserves the right, at its sole discretion, to modify or replace this Agreement at any time. If a revision is material we will provide at least 15 days\' notice prior to any new terms taking effect. What constitutes a material change will be determined at our sole discretion.</string>
    <string name="contactInfoLabel">Contact Information</string>
    <string name="contactText">If you have any questions about this Agreement, please contact us by email at support@ikonasoftware.com.</string>
    <string name="ikonaAddress">Ikona AG Rue Robert-Céard 6, 1204 Genève, Switzerland</string>
    <string name="updateInfo">Last updated: January 26, 2016</string>
    <string name="scopeLabel">Scope</string>
    <string name="scopeText">Your privacy is important to Ikona and we go to great lengths to protect it. This Privacy Policy applies to the online collection of personal information via the IkodeSC Reader® mobile applications operated by Ikona AG and its worldwide affiliated companies and subsidiaries. This Statement does not apply to information collected in any other way, including offline, through Ikona® and Ikode® Websites, or through other Ikona mobile applications. IkodeSC Reader® is a counter-fraud authenticity versification tool and may contain buttons or links to Ikona\'s Counter-fraud Exchanges or to sites maintained by third party Ikode® clients that offer such authenticity verification for their products, documents or services. Whereas the Ikona Counter-fraud Exchange servers are operated and it\'s appropriate security, third party sites are not operated or controlled by Ikona and may have different privacy practices.</string>
    <string name="definitionsLabel">Definitions</string>
    <string name="definitionsText">In this Privacy Policy statement \n•\tThe terms \"Personal Information\" or \"Personally Identifiable Information\" means your phone number, email address, and/or user ID information that identify you personally as well as unique device identifiers such as IMEI, MEID, IMSI, or ESN. Geo-location (GPS, WiFi) is a user choice/opt-in, though recommended; \n•\tThe terms “Personal Information” and \"Personally Identifiable Information” do not include name, technical information (for example, Media Access Control “MAC” address, and Internet Protocol or “IP” address), or numbers or alpha-numeric identifiers assigned by us, third-parties, or your computer. We do not access your text messages or email, call logs, contacts/address book, financial and payment information, health and medical information, photos or videos, Web browsing history and/or apps downloaded or used on your mobile device.</string>
    <string name="highlightsLabel">Highlights</string>
    <string name="highlightsText1">What information is collected and how is that information used?</string>
    <string name="highlightsText2"><![CDATA[What information is collected and how is that information used? •\tWe collect information about our users in the following ways: directly from the user (when registering with us), from our Counter-fraud Exchange server & application logs every time you start to use the IkodeSC Reader® app for user authentication, as well as when you make changes to the app\'s Settings, for instance: 1.\tA unique user identifier (UUID) we assign to you and visible portrait as a smartcode \tin your Profile and other Activity screens of the IkodeSC Reader® app; 2.\tUnique device identifiers such as IMEI, MEID, IMSI, or ESN, MAC address, or similar \tidentifiers; 3.\tInformation or text that you enter in the application; 4.\tThe kind of operating system and mobile device you use, including version number; 5.\tOther technical facts regarding your mobile device; 6.\tLanguage preferences; 7.\tThe number of links or buttons you click within the IkodeSC Reader® app; 8.\tThe date and time when you log into your app; 9.\tThe content of the barcode, or smartcode you decode and request an authenticity \tverification, as well as the verification result sent back to you from such a request. •\tWe use the information, including analytics information, primarily to provide you with mobile application experience that delivers the information, resources, and services that are most relevant and helpful to you and to ensure quality of service, for instance: 1.\tThe name of your Internet service provider; 2.\tOther technical facts regarding your network access; 3.\tThe city, state, and country where you are using the application. •\tWe do not collect information about our users through cookies and through the use of local storage, including but no limited to local shared objects or \"flash cookies\". •\tWe do not share your Personal Information, unless we so in this Privacy Policy, or when we believe in good faith that the law requires it.]]></string>
    <string name="highlightsText3">How is my personal information protected?</string>
    <string name="highlightsText4">•\tWe have implemented certain appropriate security measures to help protect your personal information from accidental loss and from unauthorized access, use, or disclosure. •\tWe store the information about you in our Counter-fraud Exchange data center(s) with restricted access and appropriate monitoring. •\tWe use intrusion detection and virus protection software. •\tDespite these measures, we do not guarantee that unauthorized persons will always be unable to defeat our security measures.</string>
    <string name="highlightsText5">Who has access to the personal information?</string>
</resources>